RustPlugin/Source/RustPlugin/Public/Bindings.h

enum class ActionState : uint8_t {
  Pressed = 0,
  Released = 1,
  Held = 2,
};
enum class ActorClass : uint32_t {
  RustActor = 0,
  CameraActor = 1,
};
enum class ActorComponentType : uint32_t {
  Primitive,
};
enum class EventType : uint32_t {
  ActorSpawned = 0,
  ActorBeginOverlap = 1,
  ActorEndOverlap = 2,
};
enum class ReflectionType : uint32_t {
  Float,
  Vector3,
  Bool,
  Quaternion,
  UClass,
  USound,
  Composite,
};
enum class ResultCode : uint8_t {
  Success = 0,
  Panic = 1,
};
enum class UObjectType : uint32_t {
  UClass,
};
struct Vector3 {
  float x;
  float y;
  float z;
};
struct Quaternion {
  float x;
  float y;
  float z;
  float w;
};
struct Color {
  uint8_t r;
  uint8_t g;
  uint8_t b;
  uint8_t a;
};
struct Utf8Str {
  const char *ptr;
  uintptr_t len;
};
struct Uuid {
  uint32_t a;
  uint32_t b;
  uint32_t c;
  uint32_t d;
};
struct Entity {
  uint64_t id;
};
struct ActorComponentPtr {
  ActorComponentType ty;
  void *ptr;
};
struct RustAlloc {
  uint8_t *ptr;
  uintptr_t size;
  uintptr_t align;
};
struct ActorFns {
  GetSpatialDataFn get_spatial_data;
  SetSpatialDataFn set_spatial_data;
  SetEntityForActorFn set_entity_for_actor;
  GetActorComponentsFn get_actor_components;
  RegisterActorOnOverlapFn register_actor_on_overlap;
  GetRootComponentFn get_root_component;
  GetRegisteredClassesFn get_registered_classes;
  GetClassFn get_class;
  SetViewTargetFn set_view_target;
  GetActorNameFn get_actor_name;
  SetOwnerFn set_owner;
  IsMoveableFn is_moveable;
};
using GetVelocityFn = Vector3(*)(const UPrimtiveOpaque *primitive);
using GetBoundingBoxExtentFn = Vector3(*)(const UPrimtiveOpaque *primitive);
struct PhysicsFns {
  GetVelocityFn get_velocity;
  SetVelocityFn set_velocity;
  IsSimulatingFn is_simulating;
  AddForceFn add_force;
  AddImpulseFn add_impulse;
  LineTraceFn line_trace;
  GetBoundingBoxExtentFn get_bounding_box_extent;
  SweepFn sweep;
  SweepMultiFn sweep_multi;
  OverlapMultiFn overlap_multi;
  GetCollisionShapeFn get_collision_shape;
};
struct EditorComponentFns {
  GetEditorComponentUuidsFn get_editor_components;
  GetEditorComponentQuatFn get_editor_component_quat;
  GetEditorComponentVectorFn get_editor_component_vector;
  GetEditorComponentBoolFn get_editor_component_bool;
  GetEditorComponentFloatFn get_editor_component_float;
  GetEditorComponentUObjectFn get_editor_component_uobject;
};
struct SoundFns {
  PlaySoundAtLocationFn play_sound_at_location;
};
struct UnrealBindings {
  ActorFns actor_fns;
  PhysicsFns physics_fns;
  LogFn log;
  IterateActorsFn iterate_actors;
  GetActionStateFn get_action_state;
  GetAxisValueFn get_axis_value;
  SpawnActorFn spawn_actor;
  GetMouseDeltaFn get_mouse_delta;
  VisualLogSegmentFn visual_log_segment;
  VisualLogCapsuleFn visual_log_capsule;
  VisualLogLocationFn visual_log_location;
  EditorComponentFns editor_component_fns;
  SoundFns sound_fns;
};
using TickFn = ResultCode(*)(float dt);
using BeginPlayFn = ResultCode(*)();
struct ReflectionFns {
  NumberOfFieldsFn number_of_fields;
  HasComponentFn has_component;
  GetTypeNameFn get_type_name;
  GetFieldTypeFn get_field_type;
  GetFieldNameFn get_field_name;
  GetFieldVector3ValueFn get_field_vector3_value;
  GetFieldBoolValueFn get_field_bool_value;
  GetFieldFloatValueFn get_field_float_value;
  GetFieldQuatValueFn get_field_quat_value;
};
struct AllocateFns {
  AllocateFn allocate;
};
struct RustBindings {
  RetrieveUuids retrieve_uuids;
  TickFn tick;
  BeginPlayFn begin_play;
  UnrealEventFn unreal_event;
  ReflectionFns reflection_fns;
  AllocateFns allocate_fns;
};
struct ActorSpawnedEvent {
  AActorOpaque *actor;
};
struct ActorBeginOverlap {
  AActorOpaque *overlapped_actor;
  AActorOpaque *other;
};
struct ActorEndOverlap {
  AActorOpaque *overlapped_actor;
  AActorOpaque *other;
};
extern void TickActor(AActorOpaque *actor, float dt);
extern void Log(const char *s, int32_t len);
extern void IterateActors(AActorOpaque **array, uint64_t *len);
extern void GetActionState(const char *name, uintptr_t len, ActionState state, uint32_t *out);
extern void GetAxisValue(const char *name, uintptr_t len, float *value);
extern AActorOpaque *SpawnActor(ActorClass actor_class,
                                Vector3 position,
                                Quaternion rotation,
                                Vector3 scale);
extern void GetMouseDelta(float *x, float *y);
extern void VisualLogSegment(const AActorOpaque *owner, Vector3 start, Vector3 end, Color color);
extern void VisualLogCapsule(Utf8Str category,
                             const AActorOpaque *owner,
                             Vector3 position,
                             Quaternion rotation,
                             float half_height,
                             float radius,
                             Color color);
extern void VisualLogLocation(Utf8Str category,
                              const AActorOpaque *owner,
                              Vector3 position,
                              float radius,
                              Color color);
extern uint32_t GetEditorComponentUuids(const AActorOpaque *actor, Uuid *data, uintptr_t *len);
extern uint32_t GetEditorComponentVector(const AActorOpaque *actor,
                                         Uuid uuid,
                                         Utf8Str field,
                                         Vector3 *out);
extern uint32_t GetEditorComponentFloat(const AActorOpaque *actor,
                                        Uuid uuid,
                                        Utf8Str field,
                                        float *out);
extern uint32_t GetEditorComponentBool(const AActorOpaque *actor,
                                       Uuid uuid,
                                       Utf8Str field,
                                       uint32_t *out);
extern uint32_t GetEditorComponentQuat(const AActorOpaque *actor,
                                       Uuid uuid,
                                       Utf8Str field,
                                       Quaternion *out);
extern uint32_t GetEditorComponentUObject(const AActorOpaque *actor,
                                          Uuid uuid,
                                          Utf8Str field,
                                          UObjectType ty,
                                          UObjectOpague **out);